Sync up SceneBuilder changes